@@ -1,3 +1,3 @@
 <B><FONT SIZE=-1>Upstream 2017-05-15<BR>
-Qt Port and FM7 series 2017-05-18<BR>
+Qt Port and FM7 series 2017-05-18 HOTFIX1<BR>
 </FONT></B>
