@@ -9,15 +9,15 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2017-05-15<BR>
-Qt Port and FM7 series 2017-05-18<BR>
+Qt Port and FM7 series 2017-05-18 HOTFIX1<BR>
 libCSPavio 2.6.3<BR>
 libCSPgui 2.9.1<BR>
 libCSPosd 2.8.0<BR>
 libCSPemu_utils 2.5.0<BR>
-libCSPcommon_vm 1.1.5<BR>
+libCSPcommon_vm 1.1.6<BR>
 libCSPfmgen 1.1.0<BR>
 FFMPEG 3.2.2 + liblame 3.99 + libx264-148<BR>
-Build Version: 8067b89f01c21ee29c1b4bb4af8e7c112f88577c<BR>
+Build Version: 5328467b46323eaa67c5f3af2657aff1481d954c<BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
@@ -70,5 +70,5 @@ See also:<BR>
 </FONT>
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Wed 17, May 2017 22:54:03<!-- hhmts end -->
+<!-- hhmts start -->Last modified: Thu 18, May 2017 18:44:16<!-- hhmts end -->
 </body> </html>
