@@ -1,5 +1,13 @@
 *** If you want to know full changes, please read 000_gitlog.txt and history.txt. ***
 
+* SNAPSHOT HOTFIX1 May 18, 2017
+  * MSX FIX only release.
+  * [VM/MSX] I missed changes; using v9938.cpp instead of v99x8.cpp .
+  * [BUILD] Add comments to buildvars*.dat.tmpl .
+  * Build with 5328467b46323eaa67c5f3af2657aff1481d954c (or later).
+
+-- May 18, 2017 18:42:12 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
+
 * SNAPSHOT May 18, 2017
   * Upstream 2017-05-15
   * [General] Rename "emumsx2plus" -> "emumsx2p".
